# web-mining-sio-granos

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/raw/: operaciones_semana_2025-04-27_2025-05-03.json  operaciones_semana_2025-05-04_2025-05-10.json  operaciones_semana_2025-05-11_2025-05-17.json  operaciones_semana_2025-05-18_2025-05-24.json  operaciones_semana_2025-05-25_2025-05-31.json  operaciones_semana_2025-06-01_2025-06-06.json
data/staging/: operaciones_semana_2025-04-27_2025-05-03.csv  operaciones_semana_2025-05-04_2025-05-10.csv  operaciones_semana_2025-05-11_2025-05-17.csv  operaciones_semana_2025-05-18_2025-05-24.csv  operaciones_semana_2025-05-25_2025-05-31.csv  operaciones_semana_2025-06-01_2025-06-06.csv
notebooks/: 1- Consultas a API y Extracción de Datos.ipynb  2- Preprocesamiento y Limpieza.ipynb  3.1- Auto EDA.ipynb  3.1- report_sio_granos.html  3.2- EDA.ipynb
