[project]
name = "web-mining-sio-granos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudscraper>=1.2.71",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "streamlit>=1.50.0",
    "ydata-profiling>=4.17.0",
]
